--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -9,76 +9,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="main-wrapper" style="display: flex; min-height: 100vh;">
+        
+        <div id="sidebarContainer"></div>
 
-    <div id="sidebarContainer"></div>
-
-    <div class="content">
-        <header>
-            <h1>Attendance Management</h1>
-            <div class="menu-container">
-                <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
-                <div id="myDropdown" class="dropdown-menu">
-                    <a href="AttendanceManagement.html" class="active-link">Attendance Management</a>
-                    <a href="AttendanceReport.html">Attendance Report</a>
-                </div>
-            </div>
-        </header>
-
-        <div class="filters">
-            <div class="filter-group" style="position: relative;">
-                <label>Courses</label>
-                <div class="course-input-box" id="courseBox">
-                    <span id="coursePillText" style="color: #666;">Select Course</span>
-                    <span class="pill-arrow">▼</span>
-                </div>
-                <div id="courseDropdown" class="dropdown-menu" style="display: none;">
-                    </div>
-            </div>
-
-            <div class="filter-group" style="position: relative;">
-                <label>Date</label>
-                <div class="calendar-input-box" id="calendarBox">
-                    <span id="selectedDateText" style="color: #666;">Select Date</span>
-                    <span class="pill-arrow">▼</span>
-                </div>
-
-                <div id="calendarWrapper" style="display: none; position: absolute; top: 100%; left: 0; z-index: 999; margin-top: 5px;">
-                    <div class="calendar-container">
-                        <div class="cal-header">
-                            <span id="prevMonth">&laquo;</span>
-                            <span id="currentMonthYear" class="month-name"></span>
-                            <span id="nextMonth">&raquo;</span>
-                        </div>
-                        <div class="day-labels">
-                            <div class="weekend-label">Sun</div>
-                            <div>Mon</div><div>Tue</div><div>Wed</div><div>Thu</div><div>Fri</div>
-                            <div class="weekend-label">Sat</div>
-                        </div>
-                        <div id="calendarDays" class="days-grid"></div>
+        <div class="content" style="flex-grow: 1; padding: 20px; background-color: #f4f7f6;">
+            <header>
+                <h1>Attendance Management</h1>
+                <div class="menu-container">
+                    <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
+                    <div id="myDropdown" class="dropdown-menu">
+                        <a href="AttendanceManagement.html" class="active-link">Attendance Management</a>
+                        <a href="AttendanceReport.html">Attendance Report</a>
                     </div>
                 </div>
-            </div>
-        </div>
+            </header>
 
-        <div class="table-box">
-            <table>
-                <thead class="table-header">
-                    <tr>
-                        <th style="width: 40%;">Name</th>
-                        <th style="width: 30%;">Student ID</th>
-                        <th style="width: 30%;">Status</th>
-                    </tr>
-                </thead>
-                <tbody id="studentTableBody">
-                    <tr><td colspan="3" style="text-align: center; color: #666;">Select Course and Date to load students</td></tr>
-                </tbody>
-            </table>
-            <div class="footer-actions">
-                <button class="btn-save" onclick="saveAttendance()">Save All</button>
+            <div class="filters">
+                <div class="filter-group" style="position: relative;">
+                    <label>Courses</label>
+                    <div class="course-input-box" id="courseBox">
+                        <span id="coursePillText" style="color: #666;">Select Course</span>
+                        <span class="pill-arrow">▼</span>
+                    </div>
+                    <div id="courseDropdown" class="dropdown-menu" style="display: none;"></div>
+                </div>
+
+                <div class="filter-group" style="position: relative;">
+                    <label>Date</label>
+                    <div class="calendar-input-box" id="calendarBox">
+                        <span id="selectedDateText" style="color: #666;">Select Date</span>
+                        <span class="pill-arrow">▼</span>
+                    </div>
+                    <div id="calendarWrapper" style="display: none; position: absolute; top: 100%; left: 0; z-index: 999; margin-top: 5px;">
+                        </div>
+                </div>
+            </div>
+
+            <div class="table-box">
+                <table>
+                    <thead class="table-header">
+                        <tr>
+                            <th style="width: 40%;">Name</th>
+                            <th style="width: 30%;">Student ID</th>
+                            <th style="width: 30%;">Status</th>
+                        </tr>
+                    </thead>
+                    <tbody id="studentTableBody">
+                        <tr><td colspan="3" style="text-align: center; color: #666;">Select Course and Date to load students</td></tr>
+                    </tbody>
+                </table>
+                <div class="footer-actions">
+                    <button class="btn-save" onclick="saveAttendance()">Save All</button>
+                </div>
             </div>
         </div>
     </div>
 
+    
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
@@ -278,3 +266,4 @@
     </script>
 </body>
 </html>
+
