--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -42,7 +42,7 @@
 
     <div id="sidebar-placeholder"></div>
 
-    <div class="main-content" style="flex-grow: 1; min-height: 100vh; display: flex; flex-direction: column;">
+  <div class="main-content">
         <header>
             <h1>Attendance Management</h1>
             <div class="menu-container">
@@ -324,3 +324,4 @@
     </script>
 </body>
 </html>
+
