--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -24,7 +24,7 @@
         @keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0); } }
     </style>
 </head>
-<body style="display: flex; margin: 0; background-color: #f4f7f6;">
+<body style="display: flex;">
 
     <div id="toast-container"></div>
 
@@ -324,4 +324,5 @@
     </script>
 </body>
 </html>
+
 
