--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -51,8 +51,8 @@
         @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
     </style>
 </head>
-<body style="display: flex; margin: 0; background-color: #f4f7f6;">
-    <div id="sidebar-placeholder" style="width: 240px; min-height: 100vh; background: #008080;"></div>
+<body style="display: flex;">
+    <div id="sidebar-placeholder"></div>
 
     <div id="logoutModal" class="logout-modal">
         <div class="modal-content">
@@ -306,6 +306,7 @@
 </body>
 
 </html>
+
 
 
 
