--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -147,56 +147,66 @@
     const db = getDatabase(app);
 
     // --- SIDEBAR LOADER ---
-        async function loadSidebar() {
-            try {
-                const response = await fetch('SideBar.html');
-                if (!response.ok) throw new Error("Sidebar fetch failed");
-                document.getElementById('sidebar-placeholder').innerHTML = await response.text();
+       // --- SIDEBAR LOADER ---
+async function loadSidebar() {
+    try {
+        const response = await fetch('SideBar.html');
+        if (!response.ok) throw new Error("Sidebar fetch failed");
+        
+        // 1. Inject the HTML
+        document.getElementById('sidebar-placeholder').innerHTML = await response.text();
 
-                // Highlight Active Page
-                const path = window.location.pathname.split("/").pop() || "index.html";
-                const navLinks = document.querySelectorAll('.nav-links a');
-                navLinks.forEach(link => {
-                    if (link.getAttribute('href') === path) {
-                        link.parentElement.classList.add('active');
-                    }
-                });
+        // 2. ONLY NOW can you find the elements inside the sidebar
+        const path = window.location.pathname.split("/").pop() || "index.html";
+        const navLinks = document.querySelectorAll('.nav-links a');
+        navLinks.forEach(link => {
+            if (link.getAttribute('href') === path) {
+                link.parentElement.classList.add('active');
+            }
+        });
 
-                // Bind Logout Button
-                document.getElementById('logoutBtn').onclick = (e) => {
-                    e.preventDefault();
-                    document.getElementById('logoutModal').style.display = 'flex';
-                };
-            } catch (err) { console.error(err); }
+        // Bind Logout Button (Check if it exists first)
+        const logoutBtn = document.getElementById('logoutBtn');
+        if (logoutBtn) {
+            logoutBtn.onclick = (e) => {
+                e.preventDefault();
+                document.getElementById('logoutModal').style.display = 'flex';
+            };
         }
+        
+        // Trigger Profile Sync once we know the sidebar is ready
+        syncProfile();
 
-    // --- AUTH & PROFILE ---
-    onAuthStateChanged(auth, (user) => {
-        if (user) {
-            populateFilters();
-            const userRef = ref(db, 'users/' + user.uid);
-            onValue(userRef, (snapshot) => {
-                const data = snapshot.val();
-                if (data && document.getElementById('sidebarName')) {
-                    document.getElementById('sidebarName').textContent = data.fullName || "Admin";
-                    document.getElementById('sidebarRole').textContent = data.role || "Teacher";
-                    const container = document.getElementById('profileContainer');
-                    if (container) {
-                        container.innerHTML = (data.profilePic && data.profilePic !== "avatar.png") 
-                            ? `<img src="${data.profilePic}" style="width:100%; height:100%; border-radius:50%; object-fit:cover;">`
-                            : `<i class="fas fa-user-tie"></i>`;
-                    }
-                }
-            });
-        } else {
-            window.location.href = 'index.html';
+    } catch (err) { 
+        console.error("Sidebar Error:", err); 
+    }
+}
+
+// Separate function for profile sync to call after sidebar loads
+function syncProfile() {
+    const user = auth.currentUser;
+    if (!user) return;
+
+    const userRef = ref(db, 'users/' + user.uid);
+    onValue(userRef, (snapshot) => {
+        const data = snapshot.val();
+        // Use optional chaining or null checks because elements might be slow to render
+        const nameEl = document.getElementById('sidebarName');
+        const roleEl = document.getElementById('sidebarRole');
+        const container = document.getElementById('profileContainer');
+
+        if (data && nameEl) {
+            nameEl.textContent = data.fullName || "Admin";
+            if (roleEl) roleEl.textContent = data.role || "Teacher";
+            if (container) {
+                container.innerHTML = (data.profilePic && data.profilePic !== "avatar.png") 
+                    ? `<img src="${data.profilePic}" style="width:100%; height:100%; border-radius:50%; object-fit:cover;">`
+                    : `<i class="fas fa-user-tie"></i>`;
+            }
         }
     });
+}
 
-    window.closeLogoutModal = () => document.getElementById('logoutModal').style.display = 'none';
-    document.getElementById('confirmLogout').addEventListener('click', () => {
-        signOut(auth).then(() => window.location.href = 'index.html');
-    });
 
     // --- AUTOMATIC REPORT LOGIC ---
     async function populateFilters() {
@@ -305,6 +315,7 @@
 </body>
 
 </html>
+
 
 
 
