--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -68,7 +68,7 @@
 
     <div class="main-content" style="flex-grow: 1; height: 100vh; overflow-y: auto;">
         <header class="top-header">
-            <h1 style="font-weight: bold;">Attendance Report</h1>
+            <h1 class="left-header">Attendance Report</h1>
             <div class="menu-container">
                 <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
                 <div id="myDropdown" class="dropdown-menu">
@@ -349,6 +349,7 @@ window.onclick = function(event) {
 </body>
 
 </html>
+
 
 
 
