--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -68,7 +68,9 @@
 
     <div class="main-content" style="flex-grow: 1; height: 100vh; overflow-y: auto;">
         <header class="top-header">
-            <h1 class="left-header">Attendance Report</h1>
+            <div class="left-header">
+              <h1>Attendance Report</h1> 
+            </div>
             <div class="menu-container">
                 <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
                 <div id="myDropdown" class="dropdown-menu">
@@ -349,6 +351,7 @@ window.onclick = function(event) {
 </body>
 
 </html>
+
 
 
 
