--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -68,7 +68,7 @@
 
     <div class="main-content" style="flex-grow: 1; height: 100vh; overflow-y: auto;">
         <header class="top-header">
-            <div class="left-header">
+            <div class="header-left">
               <h1>Attendance Report</h1> 
             </div>
             <div class="menu-container">
@@ -351,6 +351,7 @@ window.onclick = function(event) {
 </body>
 
 </html>
+
 
 
 
