--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -58,8 +58,10 @@
     <div id="sidebar-placeholder"></div>
 
     <div class="main-content">
-        <header style="margin-bottom: 25px;">
-            <h1 style="font-weight: bold; margin: 0;">Attendance Management</h1>
+         <header class="top-header">
+            <div class="header-left">
+              <h1>Attendance Management</h1> 
+            </div>
             <div class="menu-container">
                 <button class="menu-button" onclick="toggleMenu()">&#9776;</button>
                 <div id="myDropdown" class="dropdown-menu">
@@ -351,3 +353,4 @@
     </script>
 </body>
 </html>
+
