--- a/Users.html
+++ b/Users.html
@@ -262,34 +262,43 @@
     }
 
     // --- SIDEBAR LOADER ---
-    async function loadSidebar() {
-        try {
-            const response = await fetch('SideBar.html');
-            if (!response.ok) throw new Error("Failed to fetch sidebar");
-            const html = await response.text();
-            document.getElementById('sidebar-placeholder').innerHTML = html;
+   async function loadSidebar() {
+    try {
+        const response = await fetch('SideBar.html');
+        if (!response.ok) throw new Error("Failed to fetch sidebar");
+        const html = await response.text();
+        document.getElementById('sidebar-placeholder').innerHTML = html;
 
-            const currentPage = window.location.pathname.split("/").pop() || "index.html";
-            document.querySelectorAll('.nav-links li').forEach(li => li.classList.remove('active'));
-            document.querySelectorAll('.nav-links a').forEach(link => {
-                if (link.getAttribute('href') === currentPage) {
-                    link.parentElement.classList.add('active');
-                }
-            });
+        // Get the current file name accurately
+        const path = window.location.pathname;
+        const currentPage = path.split("/").pop() || "index.html";
 
-            const logoutBtn = document.getElementById('logoutBtn');
-            if (logoutBtn) {
-                logoutBtn.addEventListener('click', (e) => {
-                    e.preventDefault();
-                    document.getElementById('logoutModal').style.display = 'flex';
-                });
+        // Remove 'active' from all first, then add to the specific one
+        const navLinks = document.querySelectorAll('.nav-links a');
+        navLinks.forEach(link => {
+            const linkHref = link.getAttribute('href');
+            
+            // Remove active class from parent nav-item to be safe
+            link.parentElement.classList.remove('active');
+
+            // Exact match check
+            if (linkHref === currentPage) {
+                link.parentElement.classList.add('active');
             }
-        } catch (error) {
-            console.error("Sidebar Error:", error);
-        }
-    }
+        });
 
-    // --- LOGOUT LOGIC (Combined & Fixed) ---
+        // Re-bind logout
+        document.getElementById('logoutBtn').addEventListener('click', (e) => {
+            e.preventDefault();
+            document.getElementById('logoutModal').style.display = 'flex';
+        });
+
+    } catch (error) {
+        console.error("Sidebar Error:", error);
+    }
+}
+
+    // --- LOGOUT LOGIC ---
     document.getElementById('confirmLogout').addEventListener('click', () => {
         document.getElementById('logoutModal').style.display = 'none';
         notify("Logging out Redirecting...", "info");
@@ -480,6 +489,7 @@
         document.getElementById('editAge').value = calculateAge(e.target.value);
     });
 </script>
+
 
 
 
