--- a/Users.html
+++ b/Users.html
@@ -52,7 +52,7 @@
         @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
     </style>
 </head>
-<body style="display: flex; margin: 0;"> 
+<body style="display: flex;"> 
     <div id="sidebar-placeholder"></div>
     <div id="toast-container"></div>
       <div class="main-content">
@@ -480,3 +480,4 @@
         document.getElementById('editAge').value = calculateAge(e.target.value);
     });
 </script>
+
