--- a/Users.html
+++ b/Users.html
@@ -52,105 +52,153 @@
         @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
     </style>
 </head>
-  <body>
-    <div class="dashboard-wrapper">
-
-        <!-- SIDEBAR -->
-        <div id="sidebar-placeholder"></div>
-
-        <!-- MAIN CONTENT -->
-        <div class="main-content">
-
-            <header class="top-header">
-                <h1>Users</h1>
-            </header>
-
-            <div class="controls-row">
-                <button class="btn-add-student" onclick="openModal()">+ Student</button>
-            </div>
-
-            <h3 class="admin-label">
-                Hello! <span id="display-admin-name">Loading...</span>
-            </h3>
-
-            <!-- PROFILE CARD -->
-            <div class="profile-card">
-                <div class="card-content">
-                    <h2 class="card-title">Teacher's Profile</h2>
-
-                    <div class="profile-details">
-                        <div class="detail-item"><strong>Name:</strong> <u id="display-name">Loading...</u></div>
-                        <div class="detail-item"><strong>Age:</strong> <u id="display-age">Loading...</u></div>
-                        <div class="detail-item"><strong>Birthdate:</strong> <u id="display-birthdate">Loading...</u></div>
-                        <div class="detail-item"><strong>Gender:</strong> <span id="display-gender">Loading...</span></div>
-                        <div class="detail-item"><strong>Email:</strong> <u id="display-email">Loading...</u></div>
-                        <div class="detail-item"><strong>Birthplace:</strong> <u id="display-birthplace">Loading...</u></div>
-                        <div class="detail-item"><strong>Current Address:</strong> <u id="display-address">Loading...</u></div>
-                        <div class="detail-item"><strong>Nationality:</strong> <u id="display-nationality">Loading...</u></div>
-                        <div class="detail-item"><strong>Status:</strong> <span id="display-status">Loading...</span></div>
-                    </div>
-                </div>
-
-                <div class="photo-column">
-                    <div class="profile-photo-container">
-                        <img src="avatar.png" id="display-photo" alt="Profile Photo">
-                    </div>
-                    <button class="btn-edit-profile" onclick="openEditModal()">✎ Edit profile</button>
-                </div>
-            </div>
-
-        </div> <!-- END main-content -->
-
-    </div> <!-- END dashboard-wrapper -->
-
-
-    <!-- TOAST -->
+<body style="display: flex; margin: 0;"> 
+    <div id="sidebar-placeholder"></div>
     <div id="toast-container"></div>
+      <div class="main-content">
+        <header class="top-header">
+            <h1>Users</h1>       
+        </header>
 
+        <div class="controls-row">
+            <button class="btn-add-student" onclick="openModal()">+ Student</button>
+        </div>
+        
+     <h3 class="admin-label">Hello! <span id="display-admin-name">Loading...</span></h3>
 
-    <!-- LOGOUT MODAL -->
-    <div id="logoutModal" class="logout-modal">
-        <div class="modal-content">
-            <i class="fas fa-sign-out-alt" style="font-size: 40px; color: #e74c3c; margin-bottom: 15px;"></i>
-            <h2>Confirm Logout</h2>
-            <p>Are you sure you want to log out of the system?</p>
-            <div class="modal-btns">
-                <button class="btn-confirm" id="confirmLogout">Yes, Logout</button>
-                <button class="btn-cancel" onclick="closeLogoutModal()">Cancel</button>
-            </div>
+<div class="profile-card">
+    <div class="card-content">
+        <h2 class="card-title">Teacher's Profile</h2>
+        <div class="profile-details">
+            <div class="detail-item"><strong>Name:</strong> <u id="display-name">Loading...</u></div>
+            <div class="detail-item"><strong>Age:</strong> <u id="display-age">Loading...</u></div>
+            <div class="detail-item"><strong>Birthdate:</strong> <u id="display-birthdate">Loading...</u></div>
+            <div class="detail-item"><strong>Gender:</strong> <span id="display-gender">Loading...</span></div>
+            <div class="detail-item"><strong>Email:</strong> <u id="display-email">Loading...</u></div>
+            <div class="detail-item"><strong>Birthplace:</strong> <u id="display-birthplace">Loading...</u></div>
+            <div class="detail-item"><strong>Current Address:</strong> <u id="display-address">Loading...</u></div>
+            <div class="detail-item"><strong>Nationality:</strong> <u id="display-nationality">Loading...</u></div>
+            <div class="detail-item"><strong>Status:</strong> <span id="display-status">Loading...</span></div>
         </div>
     </div>
 
+    <div class="photo-column">
+        <div class="profile-photo-container">
+            <img src="avatar.png" id="display-photo" alt="Profile Photo">
+        </div>
+        <button class="btn-edit-profile" onclick="openEditModal()">✎ Edit profile</button>
+    </div>
+</div>
 
-    <!-- STUDENT MODAL -->
-    <div id="studentModal" class="modal-overlay" style="display: none;">
-        <div class="modal-card">
-            <div class="modal-body">
-                <h3>New Student Details</h3>
-
+<div id="editProfileModal" class="modal-overlay" style="display: none;">
+    <div class="modal-card">
+       <div class="modal-body">
+            <h3 class="full-width">Update Teacher Profile</h3>
+            <div class="file-input-wrapper">
+                <img id="edit-preview" src="avatar.png" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 2px solid #ddd;">
+                <label for="editPhoto" class="btn-upload">Choose New Photo</label>
+                <input type="file" id="editPhoto" accept="image/*" onchange="previewImage(event)">
+            </div>
+            <div class="modal-grid">
                 <div class="modal-form-group">
                     <label>Full Name</label>
-                    <input type="text" id="stuName">
+                    <input type="text" id="editName">
+                </div>
+                <div class="modal-form-group">
+                    <label>Email Address</label>
+                    <input type="email" id="editEmail">
+                </div>
+               <div class="modal-form-group">
+                    <label>Age</label>
+                    <input type="text" id="editAge" readonly style="background-color: #f0f0f0; cursor: not-allowed;">
+                </div>
+                <div class="modal-form-group">
+                    <label>Birthdate</label>
+                    <input type="date" id="editBirthdate">
+                </div>
+                <div class="modal-form-group">
+                    <label>Gender</label>
+                    <select id="editGender">
+                        <option value="MALE">MALE</option>
+                        <option value="FEMALE">FEMALE</option>
+                        <option value="OTHER">OTHER</option>
+                    </select>
+                </div>
+                <div class="modal-form-group">
+                    <label>Status</label>
+                    <select id="editStatus">
+                        <option value="SINGLE">SINGLE</option>
+                        <option value="MARRIED">MARRIED</option>
+                        <option value="WIDOWED">WIDOWED</option>
+                    </select>
+                </div>
+                <div class="modal-form-group">
+                    <label>Birthplace</label>
+                    <input type="text" id="editBirthplace">
+                </div>
+                <div class="modal-form-group">
+                    <label>Nationality</label>
+                    <input type="text" id="editNationality">
+                </div>
+                <div class="modal-form-group full-width">
+                    <label>Current Address</label>
+                    <input type="text" id="editAddress">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn-submit" id="saveBtn" onclick="saveProfile()">Save Changes</button>
+                <button class="btn-clear" onclick="closeEditModal()">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+          <div id="logoutModal" class="logout-modal">
+    <div class="modal-content">
+        <i class="fas fa-sign-out-alt" style="font-size: 40px; color: #e74c3c; margin-bottom: 15px;"></i>
+        <h2>Confirm Logout</h2>
+        <p>Are you sure you want to log out of the system?</p>
+        <div class="modal-btns">
+            <button class="btn-confirm" id="confirmLogout">Yes, Logout</button>
+            <button class="btn-cancel" onclick="closeLogoutModal()">Cancel</button>
+        </div>
+    </div>
+</div>
+
+    <div id="studentModal" class="modal-overlay" style="display: none;">
+        <div class="modal-card">
+            <div class="modal-header"></div>
+            <div class="modal-body">
+                <h3>New Student Details</h3>
+   
+                <div class="modal-form-group">
+                    <label>Full Name</label>
+                    <input type="text" id="stuName" placeholder="Please enter your fullname">
+                    <small id="error-name" class="error-msg" style="color: red; display: none;">❌ This name is already registered.</small>
                 </div>
 
                 <div class="modal-form-group">
                     <label>Email</label>
-                    <input type="email" id="stuEmail">
+                    <input type="email" id="stuEmail" placeholder="Please enter your email">
+                    <small id="error-email" class="error-msg">❌ Email must end with @gmail.com</small>
                 </div>
 
-                <div class="modal-form-group">
+               <div class="modal-form-group">
                     <label>Student ID</label>
-                    <input type="text" id="stuID">
+                    <input type="text" id="stuID" placeholder="Numbers & symbols only" maxlength="10">
+                    <small id="error-id" class="error-msg">❌ This Student ID is already registered.</small>
                 </div>
 
                 <div class="modal-form-group">
                     <label>Course</label>
-                    <input type="text" id="stuCourse">
+                    <input type="text" id="stuCourse" placeholder="e.g. PLATECH" oninput="this.value = this.value.toUpperCase()">
                 </div>
 
-                <div class="modal-form-group">
+                <div class="modal-form-group" style="margin-bottom: 15px;">
+
                     <label>Year lvl</label>
-                    <select id="stuYear">
+                    <select id="stuYear" style="padding: 8px; border-radius: 5px; border: 1px solid #ccc;">
                         <option value="" disabled selected>Select Year Level</option>
                         <option value="1st Year">1st Year</option>
                         <option value="2nd Year">2nd Year</option>
@@ -158,10 +206,10 @@
                         <option value="4th Year">4th Year</option>
                     </select>
                 </div>
-
                 <div class="modal-form-group">
+
                     <label>Section</label>
-                    <input type="text" id="stuSection">
+                    <input type="text" id="stuSection" placeholder="e.g. IT803A">
                 </div>
 
                 <div class="modal-footer">
@@ -171,8 +219,7 @@
             </div>
         </div>
     </div>
-
-
+  </div>
 <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
     import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
@@ -433,7 +480,6 @@
         document.getElementById('editAge').value = calculateAge(e.target.value);
     });
 </script>
-  </body>
-</html>
 
 
+  </body></html>
