--- a/Users.html
+++ b/Users.html
@@ -52,10 +52,10 @@
         @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
     </style>
 </head>
-<body style="display: flex; margin: 0;"> 
-    <div id="sidebar-placeholder"></div>
-    <div id="toast-container"></div>
-      <div class="main-content">
+<body>
+    <div class="dashboard-wrapper">
+        <div id="sidebar-placeholder"></div>
+        <div class="main-content">
         <header class="top-header">
             <h1>Users</h1>       
         </header>
@@ -219,7 +219,7 @@
             </div>
         </div>
     </div>
-  </div>
+    <div id="toast-container"></div>
 <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
     import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
@@ -483,3 +483,4 @@
 
 
   </body></html>
+
