--- a/Users.html
+++ b/Users.html
@@ -54,10 +54,12 @@
 </head>
 <body>
         <div id="sidebar-placeholder"></div>
-        <div class="main-content">
-        <header class="top-header">
-            <h1>Users</h1>       
-        </header>
+    
+   <div class="main-content">
+<header class="top-header">
+    <div class="header-left">
+        <h1>DASHBOARD</h1>
+    </div>
 
         <div class="controls-row">
             <button class="btn-add-student" onclick="openModal()">+ Student</button>
@@ -481,5 +483,6 @@
 
 
   </body></html>
+
 
 
