--- a/Users.html
+++ b/Users.html
@@ -90,7 +90,7 @@
         <button class="btn-edit-profile" onclick="openEditModal()">✎ Edit profile</button>
     </div>
 </div>
-
+    </div>
 <div id="editProfileModal" class="modal-overlay" style="display: none;">
     <div class="modal-card">
        <div class="modal-body">
@@ -483,6 +483,7 @@
 
 
   </body></html>
+
 
 
 
