--- a/Users.html
+++ b/Users.html
@@ -61,7 +61,7 @@
 
         <header class="top-header">
             <div class="header-left">
-                <h1>DASHBOARD</h1>
+                <h1>USERS</h1>
             </div>
         </header>
 
@@ -442,6 +442,7 @@
 
 
   </body></html>
+
 
 
 
