--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <div id="toast-container"></div>
 
     <div class="login-card" id="loginForm">
-        <div class="card-header"></div>
+        <div class="card-header">
+            <img src="images/Logowhite.png" alt="Header Image">
+        </div>
         <div class="card-body">
             <h2>Login to Your Account</h2>
             <form id="loginFormElement">
@@ -171,4 +173,5 @@
 
 </body>
 </html>
+
 
