--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <div id="toast-container"></div>
 
     <div class="login-card" id="loginForm">
-        <div class="card-header">
-            <img src="images/Logowhite.png" alt="Header Image">
+            <div class="card-header">
+    <img src="images/Logowhite.png" alt="Logo">
+</div>
+
         </div>
         <div class="card-body">
             <h2>Login to Your Account</h2>
@@ -173,5 +175,6 @@
 
 </body>
 </html>
+
 
 
