--- a/index.html
+++ b/index.html
@@ -27,39 +27,37 @@
     <div id="toast-container"></div>
 
     <!-- LOGIN CARD -->
+<!-- LOGIN CARD -->
 <div class="login-card" id="loginForm">
     <div class="card-header">
         <img src="images/Logowhite.png" alt="Logo">
     </div>
-
     <div class="card-body">
-         <h2>Login to Your Account</h2>
+        <h2>Login to Your Account</h2>
         <form id="loginFormElement">
             <div class="form-group">
                 <label>Email</label>
                 <input type="email" id="loginEmail" placeholder="Please enter your email" required>
             </div>
-
             <div class="form-group">
                 <label>Password</label>
                 <input type="password" id="loginPassword" placeholder="Please enter your password" required>
             </div>
-
             <div class="form-utils">
                 <label class="remember-me">
                     <input type="checkbox"> Remember me
                 </label>
                 <a href="#" class="forgot-pass">Forgot password?</a>
             </div>
-
             <button type="submit" class="btn-action">Login</button>
-
             <div class="signup-links">
                 <label>New Teacher?</label>
                 <a href="#" onclick="showRegister()">Create Account?</a>
-    </div>
-</div>
-
+            </div>
+        </form> 
+    </div>        
+</div>          
+    
 <!-- REGISTER CARD -->
 <div class="login-card" id="registerForm" style="display:none;">
     <div class="card-header">
@@ -183,6 +181,7 @@ window.showLogin = () => {
 
 </body>
 </html>
+
 
 
 
